--- a/TutorialApp/public/index.html
+++ b/TutorialApp/public/index.html
@@ -18,6 +18,7 @@
 					<th>Email</th>
 					<th>Number</th>
 					<th>Action</th>
+					<th>&nbsp;</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -26,11 +27,14 @@
 					<td><input class="form-control" ng-model="contact.email"></input></td>
 					<td><input class="form-control" ng-model="contact.number"></input></td>
 					<td><button class="btn btn-primary" ng-click="addContact()">Add Contact</button></td>
+					<td><button class="btn btn-info" ng-click="update()">Update</button></td>
 				</tr>
 				<tr ng-repeat="contact in contactlist">
 					<td>{{contact.name}}</td>
 					<td>{{contact.email}}</td>
 					<td>{{contact.number}}</td>
+					<td><button class="btn btn-danger" ng-click="remove(contact._id)">Remove</button></td>
+					<td><button class="btn btn-warning" ng-click="edit(contact._id)">Edit</button></td>
 				</tr>
 			</tbody>
 		</table>
